--- a/portfolio-website second/styles.css
+++ b/portfolio-website second/styles.css
@@ -169,16 +169,23 @@ a{
     position:absolute;
   }
 
-  .user-image{
-    padding:2.5rem;
-    filter:grayscale(1);
-    transition:all 1s;
+  .user-image {
+    width: 400px; /* Set your desired width */
+    height: 400px; /* Set your desired height */
+    padding: 2.5rem;
+    filter: grayscale(1);
+    transition: all 1s;
     animation: scaleImage 5s linear infinite;
   }
+  
 
-  .user-image img{
-    z-index:-9;
-  }
+  .user-image img {
+    z-index: -9;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }  
+
 
   @keyframes scaleImage {
 
